# Ethical-AI

./: .gitignore  README.md  app.py  example.env  package-lock.json  pyproject.toml  setup_env_jupyterhub.sh  visualization.ipynb
document_classification/: baseline.ipynb  metrics.py  model_finetuning.ipynb  multihead_finetuning.ipynb  multimodel_finetuning.ipynb
experiments/json_prompting/: constants.py  failed.txt  json_prompting.ipynb  json_prompting.py  requirements.txt  testset_prediction_text.csv  testset_prediction_text_result_final.pkl  testset_prediction_text_result_old.pkl
experiments/method1/: load_trained.py  multilabel_viz.html  output-explainer.ipynb  requirements.txt  train.ipynb  train_multihead.ipynb  train_multiple.ipynb  train_single_model.py
experiments/results/deberta-v3-large/: test.csv
fine-tuning/: dataset_creation.py  prompts.py
prompting_techniques/: constants.py  dataset_creation.py  fine_tuning.ipynb  inference.py  metrics.py  requirements.txt  utils.py
results/baseline/: test.csv  validation.csv
results/deberta-v3-large/: test.csv  train_log.json  validation.csv
results/multimodel_finetuning_deberta-v3-base/: test.csv  validation.csv
training_logs/deberta-v3-large/: trainer_state.json
training_logs/multimodel_finetuning_deberta-v3-base/checkpoint-10220/: trainer_state.json
word_classification/: README.md  convert_dataset_to_jsonl.py
word_classification/doccano/: Anis_test_51_3.jsonl  Erik_test_51_3.jsonl  Julian_test_51_3.jsonl  Linus_test_51_3.jsonl  Peer_test_51_3.jsonl  guideline.md  label_config.json
