[tool.poetry]
name = "ethicalai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.2"
black = {extras = ["jupyter"], version = "^24.10.0"}
isort = "^5.13.2"
flake8 = "^7.1.1"
datasets = "^3.1.0"
load-dotenv = "^0.1.0"
transformers = "^4.46.2"
torch = "^2.5.1"
accelerate = "^1.1.1"
torchvision = "^0.20.1"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
